Production/Production/src/objects/SocialPost.object
<CustomObject>
    <fields>
        <fullName>R6Service__AnalyzerScore__c</fullName>
        <label>Analyzer Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R6Service__AuthorExternalId__c</fullName>
        <label>Author External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R6Service__AuthorExternalPictureURL__c</fullName>
        <label>Author External Picture URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>R6Service__AuthorRealName__c</fullName>
        <label>Author Real Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R6Service__AuthorSocialHandle__c</fullName>
        <label>Author Social Handle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R6Service__AuthorType__c</fullName>
        <label>Author Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R6Service__HarvestDate__c</fullName>
        <label>Harvest Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>R6Service__IsOutbound__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was this post made from Radian6 for the Service Cloud?</description>
        <inlineHelpText>Checked if this post was sent from Salesforce.</inlineHelpText>
        <label>Is Outbound</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>R6Service__Language__c</fullName>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R6Service__MediaIconResource__c</fullName>
        <description>A formula used by the media icon. Should not be made visible.</description>
        <formula>IF(CONTAINS(UPPER(MediaProvider),&quot;TWITTER&quot;), &quot;/resource/R6Service__Twitter_Logo&quot;,
IF(CONTAINS(UPPER(MediaProvider), &quot;FACEBOOK&quot;), &quot;/resource/R6Service__Facebook_Logo&quot;,
IF(CONTAINS(UPPER(MediaProvider), &quot;YOUTUBE&quot;), &quot;/resource/R6Service__MediaTypeYouTubeIcon&quot;,
CASE(UPPER(MediaType),
&quot;BLOGS&quot;, &quot;/resource/R6Service__MediaTypeBlogIcon&quot;,
&quot;VIDEOS&quot;, &quot;/resource/R6Service__MediaTypeVideoIcon&quot;,
&quot;IMAGES&quot;, &quot;/resource/R6Service__MediaTypeImageIcon&quot;,
&quot;MAINSTREAM NEWS&quot;, &quot;/resource/R6Service__MediaTypeNewsIcon&quot;,
&quot;MICROMEDIA&quot;, &quot;/resource/R6Service__MediaTypeMicromediaIcon&quot;,
&quot;FORUM&quot;, &quot;/resource/R6Service__MediaTypeForumIcon&quot;,
&quot;COMMENTS&quot;, &quot;/resource/R6Service__MediaTypeCommentIcon&quot;,
&quot;/resource/R6Service__DefaultChannelLogo&quot;
))))</formula>
        <label>Media Icon Resource</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R6Service__MediaIcon__c</fullName>
        <description>The icon that represents the post&apos;s medium. This will be the provider&apos;s logo for common providers, or generic media type logos for less popular providers.</description>
        <formula>IMAGE(R6Service__MediaIconResource__c, MediaType + &quot;/&quot; + MediaProvider, 48, 48)</formula>
        <inlineHelpText>The media provider or media type.</inlineHelpText>
        <label>Media Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R6Service__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>R6Service__OriginalAuthorExternalPictureURL__c</fullName>
        <description>Avatar URL of the post&apos;s original author. This data is available on Retweets.</description>
        <label>Original Author External Picture URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>R6Service__OriginalAuthorRealName__c</fullName>
        <description>Real name of the post&apos;s original author. This data is available on Retweets.</description>
        <label>Original Author Real Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R6Service__OriginalAuthorSocialHandle__c</fullName>
        <description>Social handle of the post&apos;s original author. This data is available on Retweets.</description>
        <label>Original Author Social Handle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R6Service__Origins__c</fullName>
        <label>Origins</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>R6Service__PostLink__c</fullName>
        <description>A link to the post.  This displays as the media type icon and when clicked will take you to the external media type site.</description>
        <formula>IF(ISBLANK( PostUrl), &quot;&quot;,  HYPERLINK(PostUrl,  IMAGE(R6Service__MediaIconResource__c, PostUrl, 16, 16)))</formula>
        <inlineHelpText>Click here to visit the post.</inlineHelpText>
        <label>Post Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R6Service__PostTags__c</fullName>
        <label>Post Tags</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>R6Service__RecipientExternalId__c</fullName>
        <label>Recipient External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R6Service__RecipientSocialHandle__c</fullName>
        <label>Recipient Social Handle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R6Service__ReplyToExternalId__c</fullName>
        <label>Reply To External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R6Service__SourceTags__c</fullName>
        <label>Source Tags</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>R6Service__SpamRating__c</fullName>
        <description>Is this spam or not?</description>
        <inlineHelpText>Is this spam or not?</inlineHelpText>
        <label>Spam Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Not Spam</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Spam</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>R6Service__StatusMessage__c</fullName>
        <description>Friendly post status. This will contain an easy-to-read description of the status of the post.</description>
        <formula>IF(ISBLANK(R6Service__Status__c),
NULL,
CASE(UPPER(TRIM(R6Service__Status__c)),
&apos;R6_AUTHENTICATION&apos;, $Label.R6Service__AuthorizationError,
&apos;R6_APP&apos;, $Label.R6Service__SendMessageError,
&apos;SOCIAL_ACCOUNT_AUTHENTICATION&apos;, $Label.R6Service__OauthError,
&apos;INVALID_USER_ACCOUNT&apos;, $Label.R6Service__InvalidUserAccountError,
&apos;USER_NOT_VISIBLE&apos;, $Label.R6Service__UserNotVisibleStatus,
&apos;DUPLICATE_MESSAGE_POSTED&apos;, $Label.R6Service__DuplicateMessageError,
&apos;TWITTER_USER_NOT_FOLLOWING_YOU&apos;, $Label.R6Service__TwitterUserNotFollowing,
&apos;USERNAME_HAS_CHANGED&apos;, $Label.R6Service__UsernameHasChangedError,
&apos;SEND_MESSAGE_FAILED&apos;, $Label.R6Service__SendMessageError,
&apos;SENT&apos;, $Label.R6Service__SentStatus,
&apos;PENDING&apos;, $Label.R6Service__PendingStatus,
&apos;REPLIED&apos;, $Label.R6Service__RepliedStatus,
&apos;DELETED&apos;, $Label.R6Service__DeletedStatus,
$Label.R6Service__UnknownStatus)
)</formula>
        <inlineHelpText>The post status. For example, posts may be sent, pending, deleted, replied, have an error message or be blank (for incoming posts that have not been addressed).</inlineHelpText>
        <label>Status Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R6Service__Status__c</fullName>
        <description>The status code of the post. This is the status code sent by Radian6 and is not meant to be human readable. See the StatusMessage field for the friendly status message.</description>
        <inlineHelpText>Status Code for the post, used to determine the friendly error message in StatusMessage.</inlineHelpText>
        <label>Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>R6Service__FacebookPost</fullName>
        <active>true</active>
        <label>Facebook</label>
    </recordTypes>
    <recordTypes>
        <fullName>R6Service__OtherPost</fullName>
        <active>true</active>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>R6Service__TwitterPost</fullName>
        <active>true</active>
        <label>Twitter</label>
    </recordTypes>
</CustomObject>